# dotfiles

./: .gitignore  .zshenv  README.md  create_links.sh
.config/: hyprpaper.conf  mimeapps.list  starship.toml
.config/ags/: .gitignore  app.ts  app.tsx  bun.lockb  colors.scss  config.js  config.json  main.ts  package-lock.json  package.json  style.css  style.css.map  style.scss  tsconfig.json  tslint.json
.config/anyrun/: applications.ron  config.ron  dictionary.ron  kidex.ron  style.css  symbols.ron  translate.ron  websearch.ron
.config/awesome/: rc.lua  theme.lua
.config/beets/: config.yaml
.config/btop/: btop.conf
.config/cava/: config
.config/claude/: .gitignore  CLAUDE.md  settings.json
.config/dunst/: dunstrc
.config/eww/: eww.scss  eww.yuck
.config/fastfetch/: config.jsonc
.config/fish/: config.fish  fish_exports  fish_plugins  fish_variables
.config/foot/: foot.ini
.config/ghostty/: config  keybindings
.config/git/: config  ignore
.config/gtk-3.0/: settings.ini
.config/hypr/: .stylua.toml  bindings.conf  colors.conf  handleDevice.sh  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  io.conf  monitors.lua  startup.conf  tiling.conf  workspaces.lua
.config/ideavim/: ideavimrc
.config/kitty/: colors.conf  current-theme.conf  kitty.conf  wal-theme.conf
.config/lazygit/: config.yml
.config/matugen/: config.toml  current-colors.css
.config/mpDris2/: mpDris2.conf
.config/mpd/: mpd.conf
.config/wofi/: config  (+1 more)
dotfiles/: README.md
hypr/: hyprpaper.conf
hyprstate/: Cargo.toml
hyprstate/src/: main.rs
(+433 files in other folders)
